Fix layout from moving when the scrollbar appears

--- a/js/src/app.css
+++ b/js/src/app.css
@@ -18,6 +18,7 @@ body {
 
 body {
     background-color: #f5f5f5;
+    overflow-y: scroll;
 }
 
 h1 {
